@@ -32,6 +32,7 @@ Bug fixes
  * Prevent exception when deleting a model with a protected One-to-one relationship (Neal Todd)
  * Added labels to snippet bulk edit checkboxes for screen reader users (Martey Dodoo)
  * Middleware responses during page preview are now properly returned to the user (Matt Westcott)
+ * Default text of page links in rich text uses the public page title rather than the admin display title (Andy Chosak)
 
 
 Upgrade considerations
